--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <dist:module dist:instant="true" />
 
     <application
@@ -17,7 +18,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".NewDotActivity"></activity>
+        <activity
+            android:name=".FindExperiencesActivity"
+            android:label="@string/title_activity_find_view"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".NewDotActivity" />
         <activity android:name=".DotDetailActivity" />
         <activity
             android:name=".LoginActivity"
@@ -32,7 +37,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyCmc--eSj2uFEuhtOF1gvUHU7EgT6JM82k"/>
+            android:value="AIzaSyCmc--eSj2uFEuhtOF1gvUHU7EgT6JM82k" />
     </application>
 
 </manifest>
