--- a/build.gradle
+++ b/build.gradle
@@ -25,3 +25,9 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+android {
+    lintOptions {
+        abortOnError false
+    }
+}
