--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,18 @@
 language: android
+env:
+  matrix:
+    - ANDROID_TARGET=android-21  ANDROID_ABI=armeabi-v7a
 components:
     - build-tools-28.0.3
     - extra
     - android-28
+    - $ANDROID_TARGET
+    - sys-img-armeabi-v7a-android-21
     
 before_install:
  - yes | sdkmanager "platforms;android-28"
  - chmod +x gradlew
+ - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
+ - emulator -avd test -no-skin -no-audio -no-window &
+ - adb wait-for-device
+ - adb shell input keyevent 82 &
