--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,18 @@
 language: android
-env:
-  matrix:
-    - ANDROID_TARGET=android-28  ANDROID_ABI=armeabi-v7a
+
 components:
     - build-tools-28.0.3
     - extra
     - android-28
-    - $ANDROID_TARGET
     - sys-img-armeabi-v7a-android-28
     
 before_install:
- - yes | sdkmanager "platforms;android-28"
- - chmod +x gradlew
- - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
- - emulator -avd test -no-skin -no-audio -no-window &
- - adb wait-for-device
- - adb shell input keyevent 82 &
+   - yes | sdkmanager "platforms;android-28"
+   - chmod +x gradlew
+ 
+ before_script:
+  - android list targets # list pre-installed targets # <---- list all installed targets
+  - android list sdk --no-ui --all --extended | grep -E '^id:' | awk -F '"' '{$1=""; print $2}' # <---- list all available components
+  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a # <---- this is failing, "Target id is not valid"
+  - emulator -avd test -no-audio -no-window &
+  - android-wait-for-emulator
