--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: android
 
+env:
+  matrix:
+    - ANDROID_TARGET=android-28  ANDROID_ABI=armeabi-v7a
+    
 components:
     - build-tools-28.0.3
     - extra
