--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 language: android
 
 env:
-  matrix:
-    - ANDROID_TARGET=android-28  ANDROID_ABI=armeabi-v7a
-    
+  global:
+    - ANDROID_API_LEVEL=21
+    - ANDROID_BUILD_TOOLS_VERSION=21.1.2
+    - ANDROID_ABI=google_apis/armeabi-v7a
 components:
     - build-tools-28.0.3
     - extra
