--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,10 @@ components:
     - build-tools-28.0.3
     - extra
     - android-28
-    - sys-img-armeabi-v7a-android-28
     
 before_install:
    - yes | sdkmanager "platforms;android-28"
+   - yes | sdkmanager "build-tools;28.0.3"
    - chmod +x gradlew
  
  before_script:
