--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ env:
   global:
     - ANDROID_API_LEVEL=28
     - ANDROID_BUILD_TOOLS_VERSION=28.0.3
-    - ANDROID_ABI=google_apis/armeabi-v7a
+    - ANDROID_ABI=armeabi-v7a
 components:
     - build-tools-28.0.3
     - extra
@@ -18,6 +18,5 @@ before_install:
  before_script:
   - android list targets # list pre-installed targets # <---- list all installed targets
   - android list sdk --no-ui --all --extended | grep -E '^id:' | awk -F '"' '{$1=""; print $2}' # <---- list all available components
-  - echo no | android create avd --force -n test -t android-28 --abi armeabi-v7a # <---- this is failing, "Target id is not valid"
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
