--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.projectKey=aegarro_WanderDots
-sonar.projectName=HelloWorld
+sonar.projectName=Wander
 # =====================================================
 #   Meta-data for the project
 # =====================================================
