update sonar.sources from "src/main" to "app/src/main"
Forgot that we are starting from root, where src is not directly defined. Updated path to reflect this.

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -17,7 +17,7 @@ sonar.links.issue=https://github.com/aegarro/WanderDots/issues
 sonar.host.url=https://sonarcloud.io
 sonar.organization=aegarro-github
 sonar.login=921e739be061b105f18924b63b55d2e0679a90cf
-sonar.sources=src/main
+sonar.sources=app/src/main
 sonar.language=java
 
 
